[package]
name = "rpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
criterion = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# For criterion testing
[[bench]]
name = "benchmark"
harness = false